<resources>
    <string name="app_name">Budget Tracker</string>
    <string name="userNameText">Nume utilizator</string>
    <string name="email">Email</string>
    <string name="passText">Parolă</string>
    <string name="verificare_parola">Verificare parolă</string>
    <string name="conectareButton">Conectare</string>
    <string name="inregButton">ÎNREGISTRARE</string>
    <string name="autenButton">AUTENTIFICARE</string>
    <string name="numecontText">Nume cont</string>
    <string name="tipText">Tip</string>
    <string name="monedaText">Monedă</string>
    <string name="numeText">Nume</string>
    <string name="SumaText">Sumă</string>
    <string name="contText">Cont</string>
    <string name="BeneficiarValue">Beneficiar</string>
    <string name="BeneficiarText">Beneficiar</string>
    <string name="NotăText">Notă</string>

    <string name="info_register_page_top">Înregistrare</string>
    <string name="info_register_page_bottom">Aveți deja cont? Dați click aici!</string>
    <string name="info_login_page_top">Autentificare</string>
    <string name="info_login_page_bottom">Nu aveți cont? Apasați aici!</string>
    <string name="termeni_conditii">Accept termenii si conditiile*</string>
    <string name="retine_pass_name">Reține numele si parola</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cont_curent">Cont curent: </string>
    <string name="continua">Continuă</string>
    <string name="inregistrare">Introduceți detaliile înregistrării</string>
    <string name="tip_inregistrare_text">Tip înregistrare: </string>
    <string name="suma">Sumă:</string>
    <string name="finalizeaza_inregistrarea">Finalizează înregistrarea</string>

    <string-array name="Monede">
        <item>RON</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <string-array name="tip_inregistrare">
        <item>Venit</item>
        <item>Cheltuială</item>
    </string-array>

    <string name="info_statistici">Grafic cheltuieli</string>

    <string name="mesaj_welcome">Bine ați venit!</string>
    <string name="info_welcome">Aici vă puteti gestiona bugetul într-o manieră facilă
        având posibilitatea de a urmări distribuția cheltuielilor și veniturilor.</string>
    <string name="categorie">Categorie:</string>
    <string name="adauga_cont">Adaugă cont</string>
    <string name="alegeti_actiunea">Alegeți acțiunea</string>
    <string name="stergeti_contul">Ștergeți contul</string>
    <string name="modificati_numele">Modificați numele</string>
    <string name="venituri"> Venituri</string>
    <string name="cheltuieli">Cheltuieli</string>
    <string name = "nume_cont">Nume cont:</string>
    <string name ="nume">Nume:</string>
    <string name="moneda">Monedă:</string>
    <string name="ok">Ok</string>
    <string name="incepeti_acum">Începeți acum</string>
    <string name="creati_cont">Creați un cont</string>
</resources>